# near-contracts

./: .gitignore  Cargo.toml  LICENSE  README.md  build-mocks.sh  build.sh  deploy.sh  erc20prox.rs  erc20proxy.sol  patch-deploy.sh  test.sh  test.sol
.github/workflows/: build-and-test.yml  main.yml
conversion_proxy/: Cargo.toml  build.sh
conversion_proxy/src/: lib.rs
fungible_conversion_proxy/: Cargo.toml
fungible_conversion_proxy/src/: lib.rs
fungible_proxy/: Cargo.toml  test.sh
fungible_proxy/src/: lib.rs
mocks/: Cargo.toml  build.sh
mocks/src/: fpo_oracle_mock.rs  fungible_token_mock.rs  lib.rs  switchboard_feed_parser_mock.rs
tests/sim/: conversion_proxy.rs  fungible_conversion_proxy.rs  fungible_proxy.rs  main.rs  utils.rs
